--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,14 @@
         app:layout_constraintTop_toBottomOf="@id/BoxBacon"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <CheckBox
+        android:id="@+id/BoxOnionRings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Onion Rings"
+        app:layout_constraintTop_toBottomOf="@id/BoxCheese"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -69,7 +77,7 @@
         android:text="Quantidade"
         android:textSize="16sp"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@id/BoxCheese"
+        app:layout_constraintTop_toBottomOf="@id/BoxOnionRings"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="24dp" />
 
